--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -1,4 +1,5 @@
 @import 'arco-theme/index.less';
+@import 'variables.less';
 @import 'settings.less';
 @import 'tools.less';
 @import 'generic.less';
