--- a/src/assets/less/elements.less
+++ b/src/assets/less/elements.less
@@ -1,12 +1,13 @@
 .fil-link {
-  color: rgb(22, 93, 255);
+  color: @color-primary;
   font-weight: 500;
 }
 .fil-title {
   margin: 0;
+  font-size: 24px;
 }
 .fil-subtitle {
   padding: 0;
   margin: 0;
-  color: #888799;
+  color: @color-neutral;
 }
